# PrettyGcov

./: .gitignore  HowToUpdateThePackage  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: runTests.yml
PrettyGcov/: CoverageMap.py  CoverageTree.py  GcovFile.py  GcovStat.py  Scanner.py
PrettyGcov/WebServer/: PageFactory.py  WebServer.py
PrettyGcov/WebServer/assets/: ElementStats.html  File.html  FileLine.html  Folder.html  Link.html  Style.html
tests/data/: foo.gcov_test  uncoverable.h
tests/testsFunctional/: CMakeHandlerTest.py  PageFactoryTests.py  WebServerTests.py
tests/testsUnit/: CoverageTests.py  GcovFileTests.py  ScanTests.py
tests/util/: CMakeHandler.py  CMakeLists.txt  Paths.py
tests/util/CppProjectTest/: CMakeHandler.py  CMakeLists.txt
